--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
   color: var(--very-dark-cyan);
   letter-spacing: 10px;
   font-size: 1.5rem;
-  flex: 1;
   margin: 1rem 0;
 }
 /* Caculator */
@@ -60,7 +59,8 @@ body {
   border-radius: 5px;
 }
 .calculator-container input:focus {
-  outline: 2px solid var(--very-dark-cyan);
+  outline: 2px solid var(--strong-cyan);
+  background-color: var(--white);
 }
 /* Bill Input */
 .bill-input-container {
@@ -137,7 +137,7 @@ body {
 .tip-calculations-text {
   display: flex;
   flex-direction: column;
-  color: var(--light-grayish-cyan);
+  color: var(--white);
 }
 .tip-calculations-container span {
   color: var(--grayish-cyan);
@@ -158,4 +158,59 @@ body {
   border-radius: 5px;
   color: var(--very-dark-cyan);
   margin-top: 1.5rem;
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    justify-content: center;
+    border: 2px solid black;
+  }
+  .title {
+    margin: 0 0 4rem 0;
+  }
+  .calculator-container {
+    height: 500px;
+    width: 1000px;
+    border-radius: 20px;
+  }
+  .selected-tips {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .tip:hover {
+    cursor: pointer;
+    background-color: var(--strong-cyan);
+    color: var(--very-dark-cyan);
+  }
+  .caculator-content {
+    display: flex;
+  }
+  .user-options {
+    flex: 1;
+    margin: 0 2rem 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .tip-caculations {
+    flex: 1;
+    justify-content: space-between;
+  }
+  .tip-calculations-container {
+    padding: 1rem;
+  }
+  .tip-calculations-container:nth-child(2) {
+    flex: 1;
+    align-items: flex-start;
+  }
+  .tip-amount {
+    font-size: 2.5rem;
+  }
+  .reset-btn {
+    width: 95%;
+    margin-bottom: 1.5rem;
+  }
+  .reset-btn:hover {
+    background-color: var(--light-grayish-cyan);
+    cursor: pointer;
+  }
 }
