--- a/style.css
+++ b/style.css
@@ -109,12 +109,22 @@ body {
   background-color: var(--strong-cyan);
   color: var(--very-dark-cyan);
 }
+.custom-tip-container {
+  position: relative;
+}
 .custom-tip {
   padding-right: 1rem;
   height: 100%;
 }
 .custom-tip::placeholder {
   color: var(--dark-grayish-cyan);
+}
+.empty-custom-tip {
+  color: red;
+  font-size: 0.8rem;
+  position: absolute;
+  top: 100%;
+  left: 0;
 }
 
 /* Number of People */
