--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body {
 /* Tip Calculations */
 .tip-caculations {
   background-color: var(--very-dark-cyan);
-  margin-top: 1rem;
+  margin-top: 1.2rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -221,6 +221,7 @@ body {
   .tip-caculations {
     flex: 1;
     justify-content: space-between;
+    margin-top: 0;
   }
   .tip-calculations-container {
     padding: 1rem;
